# Dash

./: Dockerfile  README.md  app.py  crashes.duckdb.wal  docker-compose.yml  header.py  kpi.py  lab.ipynb  line_word.py  pyproject.toml  row1.py  row2.py  row3.py
