[project]
name = "nyc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.0.4",
    "dash-bootstrap-components>=2.0.3",
    "dash-bootstrap-templates>=2.1.0",
    "duckdb>=1.3.2",
    "gunicorn>=23.0.0",
    "jupyter-dash>=0.4.2",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "pip>=25.1",
    "plotly>=6.0.1",
    "pyarrow>=21.0.0",
    "wordcloud>=1.9.4",
]

[dependency-groups]
dev = [
    "pyclean>=3.1.0",
    "ruff>=0.12.9",
]
